testsuite/tests/deriving/should_fail/T1830_1.hs
module T1830_1 where

import Language.Haskell.TH.Syntax (Lift)

data Foo a = Foo a deriving Lift
