testsuite/tests/deriving/should_fail/T1830_1.stderr

T1830_1.hs:5:29: error:
    Can't make a derived instance of ‘Lift (Foo a)’:
      You need DeriveLift to derive an instance for this class
    In the data declaration for ‘Foo’
